--- a/css/style.css
+++ b/css/style.css
@@ -73,49 +73,48 @@ body {
 .main-prof {
   display: flex;
   align-items: flex-start;
-  margin-bottom: 40px;
+  margin-bottom: 42px;
 }
 
 @media screen and (max-width: 600px) {
   .main-prof {
-    margin-bottom: 2.5em;
+    margin-bottom: 2.7em;
   }
 }
 
 .main-prof h1 {
-  font-weight: bold;
-  font-size: 32px;
-  margin: 18px 0 16px;
+  font-size: 38px;
+  margin: 21px 0 16px;
 }
 
 @media screen and (max-width: 600px) {
   .main-prof h1 {
-    font-size: 1.6em;
-    margin: 0.8em 0 0.6em;
+    font-size: 2.1em;
+    margin: 0.7em 0 0.4em;
   }
 }
 
 .main-prof__prof-img {
   border-radius: 50%;
-  width: 110px;
+  width: 120px;
   margin-right: 25px;
 }
 
 @media screen and (max-width: 600px) {
   .main-prof__prof-img {
-    width: 6em;
+    width: 6.5em;
     margin-right: 1em;
   }
 }
 
 .main-prof__icon-wrapper img {
-  width: 28px;
-  margin-right: 7px;
+  width: 25px;
+  margin: 0 7px 0 5px;
 }
 
 @media screen and (max-width: 600px) {
   .main-prof__icon-wrapper img {
-    width: 1.5em;
+    width: 1.3em;
     margin-right: 0.2em;
   }
 }
@@ -132,35 +131,45 @@ body {
 
 .description h2 {
   font-size: 28px;
-  margin: 32px 0 15px;
+  margin: 37px 0 17px;
 }
 
 @media screen and (max-width: 600px) {
   .description h2 {
-    font-size: 1.4em;
-    margin: 1.3em 0 0.6em;
+    font-size: 1.5em;
+    margin: 1.4em 0 0.7em;
   }
 }
 
-.description li {
-  list-style-type: disc;
-  list-style-position: inside;
+.description__content {
+  margin-left: 5px;
   line-height: 1.8;
-  margin-left: 10px;
 }
 
 @media screen and (max-width: 600px) {
-  .description li {
+  .description__content {
+    margin-left: 0.25em;
     line-height: 1.7;
-    margin-left: 0.5em;
   }
 }
 
-.description li a:link {
+.description__content li {
+  list-style-type: disc;
+  list-style-position: inside;
+  margin-left: 5px;
+}
+
+@media screen and (max-width: 600px) {
+  .description__content li {
+    margin-left: 0.25em;
+  }
+}
+
+.description__content a:link {
   color: gray;
 }
 
-.description li a:visited {
+.description__content a:visited {
   color: gray;
 }
 
