--- a/sass/style.scss
+++ b/sass/style.scss
@@ -27,40 +27,39 @@ body {
 .main-prof {
   display: flex;
   align-items: flex-start;
-  margin-bottom: 40px;
+  margin-bottom: 42px;
 
   @include sp {
-    margin-bottom: 2.5em;
+    margin-bottom: 2.7em;
   }
 
   h1 {
-    font-weight: bold;
-    font-size: 32px;
-    margin: 18px 0 16px;
+    font-size: 38px;
+    margin: 21px 0 16px;
 
     @include sp {
-      font-size: 1.6em;
-      margin: 0.8em 0 0.6em;
+      font-size: 2.1em;
+      margin: 0.7em 0 0.4em;
     }
   }
 
   &__prof-img {
     border-radius: 50%;
-    width: 110px;
+    width: 120px;
     margin-right: 25px;
 
     @include sp {
-      width: 6em;
+      width: 6.5em;
       margin-right: 1em;
     }
   }
 
   &__icon-wrapper img {
-    width: 28px;
-    margin-right: 7px;
+    width: 25px;
+    margin: 0 7px 0 5px;
 
     @include sp {
-      width: 1.5em;
+      width: 1.3em;
       margin-right: 0.2em;
     }
   }
@@ -75,23 +74,31 @@ body {
 
   h2 {
     font-size: 28px;
-    margin: 32px 0 15px;
+    margin: 37px 0 17px;
 
     @include sp {
-      font-size: 1.4em;
-      margin: 1.3em 0 0.6em;
+      font-size: 1.5em;
+      margin: 1.4em 0 0.7em;
     }
   }
 
-  li {
-    list-style-type: disc;
-    list-style-position: inside;
+  &__content {
+    margin-left: 5px;
     line-height: 1.8;
-    margin-left: 10px;
 
     @include sp {
+      margin-left: 0.25em;
       line-height: 1.7;
-      margin-left: 0.5em;
+    }
+
+    li {
+      list-style-type: disc;
+      list-style-position: inside;
+      margin-left: 5px;
+
+      @include sp {
+        margin-left: 0.25em;
+      }
     }
 
     a:link {
